Adicionando Tela inicial com texto e imagens de fundo para as estacoes

--- a/Days Until Seasons Today/Info.plist
+++ b/Days Until Seasons Today/Info.plist
@@ -29,5 +29,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widget-extension</string>
 	</dict>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
 </dict>
 </plist>
