Inserting message when the app will use the Location of the user

--- a/Days Until Seasons/Info.plist
+++ b/Days Until Seasons/Info.plist
@@ -47,5 +47,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to know your location for show you the correct Astronomical Seasons Information.</string>
 </dict>
 </plist>
