--- a/Days Until Seasons Today/Info.plist
+++ b/Days Until Seasons Today/Info.plist
@@ -29,5 +29,9 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widget-extension</string>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need to know your location for show you the correct Astronomical Seasons Information.</string>
+	<key>LSHasLocalizedDisplayName</key>
+	<true/>
 </dict>
 </plist>
