--- a/ WatchKit Extension/Info.plist
+++ b/ WatchKit Extension/Info.plist
@@ -5,9 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string> WatchKit Extension</string>
+	<string>WatchKitExtension</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>AppIcon</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>mobi.fabionogueira.Days-Until-Seasons.watchkitextension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>13</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
