--- a/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons Watch (Glance).xcscheme
+++ b/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons Watch (Glance).xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0730"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "705280C31ACB718D0099A80D"
-               BuildableName = "Days Until Seasons.app"
-               BlueprintName = "Days Until Seasons"
-               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "705281191ACB74140099A80D"
-               BuildableName = "WatchKit Extension.appex"
-               BlueprintName = "WatchKit Extension"
+               BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+               BuildableName = "Days Until Seasons Watch.app"
+               BlueprintName = "Days Until Seasons Watch"
                ReferencedContainer = "container:Days Until Seasons.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -51,28 +37,14 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7052814E1ACB841F0099A80D"
-               BuildableName = "DUSFrameworkTests.xctest"
-               BlueprintName = "DUSFrameworkTests"
-               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "70DFDF5B1ACF827100A2DE87"
-               BuildableName = "testeTests.xctest"
-               BlueprintName = "testeTests"
+               BlueprintIdentifier = "7024F0E21CC6F905000D03B3"
+               BuildableName = "Days Until Seasons Watch Extension.appex"
+               BlueprintName = "Days Until Seasons Watch Extension"
                ReferencedContainer = "container:Days Until Seasons.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -84,33 +56,13 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7052814E1ACB841F0099A80D"
-               BuildableName = "DUSFrameworkTests.xctest"
-               BlueprintName = "DUSFrameworkTests"
-               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "70DFDF5B1ACF827100A2DE87"
-               BuildableName = "testeTests.xctest"
-               BlueprintName = "testeTests"
-               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "705281281ACB74140099A80D"
-            BuildableName = "WatchKit App.app"
-            BlueprintName = "WatchKit App"
+            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+            BuildableName = "Days Until Seasons Watch.app"
+            BlueprintName = "Days Until Seasons Watch"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -126,25 +78,26 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "4">
       <RemoteRunnable
          runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.springboard"
-         RemotePath = "/">
+         BundleIdentifier = "com.apple.carousel"
+         RemotePath = "/Days Until Seasons">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "705281281ACB74140099A80D"
-            BuildableName = "WatchKit App.app"
-            BlueprintName = "WatchKit App"
+            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+            BuildableName = "Days Until Seasons Watch.app"
+            BlueprintName = "Days Until Seasons Watch"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "705281281ACB74140099A80D"
-            BuildableName = "WatchKit App.app"
-            BlueprintName = "WatchKit App"
+            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+            BuildableName = "Days Until Seasons Watch.app"
+            BlueprintName = "Days Until Seasons Watch"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -156,25 +109,26 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      launchAutomaticallySubstyle = "4">
       <RemoteRunnable
          runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.springboard"
-         RemotePath = "/">
+         BundleIdentifier = "com.apple.carousel"
+         RemotePath = "/Days Until Seasons">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "705281281ACB74140099A80D"
-            BuildableName = "WatchKit App.app"
-            BlueprintName = "WatchKit App"
+            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+            BuildableName = "Days Until Seasons Watch.app"
+            BlueprintName = "Days Until Seasons Watch"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "705281281ACB74140099A80D"
-            BuildableName = "WatchKit App.app"
-            BlueprintName = "WatchKit App"
+            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
+            BuildableName = "Days Until Seasons Watch.app"
+            BlueprintName = "Days Until Seasons Watch"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
