Adjusting frameworks and directories

--- a/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons Watch (Complication).xcscheme
+++ b/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons Watch (Complication).xcscheme
@@ -56,6 +56,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7024F1471CC7087C000D03B3"
+               BuildableName = "DUSFrameworkWatchTests.xctest"
+               BlueprintName = "DUSFrameworkWatchTests"
+               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
