--- a/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons WatchKit 1 App (Notification).xcscheme
+++ b/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons WatchKit 1 App (Notification).xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-               BuildableName = "Days Until Seasons Watch.app"
-               BlueprintName = "Days Until Seasons Watch"
+               BlueprintIdentifier = "704D839B1CC90A8800449920"
+               BuildableName = "Days Until Seasons WatchKit 1 App.app"
+               BlueprintName = "Days Until Seasons WatchKit 1 App"
                ReferencedContainer = "container:Days Until Seasons.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:Days Until Seasons.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "704D838C1CC90A8800449920"
+               BuildableName = "Days Until Seasons WatchKit 1 Extension.appex"
+               BlueprintName = "Days Until Seasons WatchKit 1 Extension"
+               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -56,23 +70,13 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7024F1471CC7087C000D03B3"
-               BuildableName = "DUSFrameworkWatchTests.xctest"
-               BlueprintName = "DUSFrameworkWatchTests"
-               ReferencedContainer = "container:Days Until Seasons.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-            BuildableName = "Days Until Seasons Watch.app"
-            BlueprintName = "Days Until Seasons Watch"
+            BlueprintIdentifier = "704D839B1CC90A8800449920"
+            BuildableName = "Days Until Seasons WatchKit 1 App.app"
+            BlueprintName = "Days Until Seasons WatchKit 1 App"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -89,25 +93,26 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "32">
+      launchAutomaticallySubstyle = "8"
+      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
          RemotePath = "/Days Until Seasons">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-            BuildableName = "Days Until Seasons Watch.app"
-            BlueprintName = "Days Until Seasons Watch"
+            BlueprintIdentifier = "704D839B1CC90A8800449920"
+            BuildableName = "Days Until Seasons WatchKit 1 App.app"
+            BlueprintName = "Days Until Seasons WatchKit 1 App"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-            BuildableName = "Days Until Seasons Watch.app"
-            BlueprintName = "Days Until Seasons Watch"
+            BlueprintIdentifier = "704D839B1CC90A8800449920"
+            BuildableName = "Days Until Seasons WatchKit 1 App.app"
+            BlueprintName = "Days Until Seasons WatchKit 1 App"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -120,25 +125,26 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
-      launchAutomaticallySubstyle = "32">
+      launchAutomaticallySubstyle = "8"
+      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
          RemotePath = "/Days Until Seasons">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-            BuildableName = "Days Until Seasons Watch.app"
-            BlueprintName = "Days Until Seasons Watch"
+            BlueprintIdentifier = "704D839B1CC90A8800449920"
+            BuildableName = "Days Until Seasons WatchKit 1 App.app"
+            BlueprintName = "Days Until Seasons WatchKit 1 App"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7024F0D61CC6F905000D03B3"
-            BuildableName = "Days Until Seasons Watch.app"
-            BlueprintName = "Days Until Seasons Watch"
+            BlueprintIdentifier = "704D839B1CC90A8800449920"
+            BuildableName = "Days Until Seasons WatchKit 1 App.app"
+            BlueprintName = "Days Until Seasons WatchKit 1 App"
             ReferencedContainer = "container:Days Until Seasons.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
