Fixing layout problems for iOS and adding image to view

--- a/Days Until Seasons/Supporting Files/Info.plist
+++ b/Days Until Seasons/Supporting Files/Info.plist
@@ -43,9 +43,7 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<array/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
