--- a/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons WatchKit 1 App (Glance).xcscheme
+++ b/Days Until Seasons.xcodeproj/xcshareddata/xcschemes/Days Until Seasons WatchKit 1 App (Glance).xcscheme
@@ -94,7 +94,7 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "4"
-      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/Supporting Files/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
@@ -126,7 +126,7 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "4"
-      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "Days Until Seasons WatchKit 1 Extension/Supporting Files/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.carousel"
